[package]
name = "graphviz-ffi"
version = "0.1.1"
authors = ["Pierre Gimalac <pierre.gimalac@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "FFI bindings for the graphviz C lib generated with rust-bindgen."
readme = "Readme.md"
homepage = "https://github.com/pgimalac/rust-graphviz"
repository = "https://github.com/pgimalac/rust-graphviz"
license = "MIT"
keywords = ["graphviz", "dot", "ffi", "C", "graph"]
categories = ["external-ffi-bindings", "visualization"]

[build-dependencies]
bindgen = "0.58.1"
